# SeiNei

./: LICENSE  README.md  pyproject.toml
examples/: Fuego2009.ipynb  Santiaguito2012.ipynb  fuego2009_events.txt  fuego2009_pysep_config.yaml  santiaguito2012.yaml
src/seinei/: __init__.py  fetch.py  output.py  tilt.py  ui.py
src/stilts/: __init__.py  _version.py  tipsy.py
